# screenpipe

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  ONBOARDING.md  README.md  REPOSITORY.md  TESTING.md
.claude/skills/screenpipe-api/: SKILL.md
.github/codex/prompts/: agentic-ui-test.md
.github/scripts/linux/: bundle-appimage-runtime-deps.sh
.github/workflows/: ci.yml  codex-agentic-ui-test.yml  deploy-ai-gateway.yml  e2e-test.yml  eval-diarization.yml  linux-appimage-smoke.yml  macos-intel-launch-smoke.yml  release-app.yml  release-cli.yml  release-enterprise.yml  sdk-release.yml  sdk.yml  style.yml  sync-skills.yml  test-ai-gateway.yml  test-signing.yml  windows-integration-test.yml
apps/screenpipe-app-tauri/: .gitignore  package.json  tsconfig.json  vitest.config.ts
apps/screenpipe-app-tauri/app/: globals.css  layout.tsx  providers.tsx
apps/screenpipe-app-tauri/components/: announcement-host.tsx  app-entitlement-gate.test.tsx  app-entitlement-gate.tsx  browser-sidebar.tsx  chat-sidebar.tsx  deeplink-handler.tsx  enterprise-license-prompt.tsx  file-preview-sidebar.tsx  file-viewer.tsx  markdown.tsx  notification-bell.tsx  notification-handler.tsx  pipe-store.tsx  plan-expiration-notice.test.tsx  plan-expiration-notice.tsx  post-install-connections-modal.tsx  recording-status.tsx  share-logs-button.tsx  standalone-chat.tsx  update-banner.tsx
apps/screenpipe-app-tauri/e2e/: COVERAGE.md  README.md  coverage-map.json  wdio.conf.ts
apps/screenpipe-app-tauri/lib/: ai-tools-mcp.ts  announcements.ts  app-entitlement.test.ts  app-entitlement.ts  auth-guard.test.tsx  auth-guard.tsx  chat-storage.ts  chat-utils.ts  connect-errors.test.ts  connect-errors.ts  external-agent-skills.ts  mcp-registry.ts  notification-analytics.ts  notifications.ts  pi-extension-catalog.ts  sidebar-pipes.ts  skills-registry.ts  source-citations.ts  summary-templates.ts  timeline-navigation.ts  upsell-gating.ts  utils.ts
apps/screenpipe-app-tauri/scripts/: build-frontend.js  build-frontend.test.js  pre_build.js
apps/screenpipe-app-tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  sign-ssl.ps1  tauri.linux.conf.json
apps/screenpipe-app-tauri/src-tauri/livetext-stress/: Cargo.toml  build.rs
apps/screenpipe-app-tauri/src-tauri/livetext-stress/src/: main.rs
apps/screenpipe-app-tauri/src-tauri/livetext-stress/swift/: support.swift
apps/screenpipe-app-tauri/src-tauri/livetext-stress/tests/: stress.rs
crates/screenpipe-a11y/: Cargo.toml
crates/screenpipe-a11y/examples/: windows_probe_harness.rs
crates/screenpipe-a11y/src/: config.rs  scroll.rs
crates/screenpipe-audio/: Cargo.toml
crates/screenpipe-audio-eval/: Cargo.toml
crates/screenpipe-audio-eval/evals/: README.md
crates/screenpipe-audio/examples/: coreaudio_tap_stage_probe.rs  wer_battle_test.rs
crates/screenpipe-audio/src/: lib.rs  meeting_processes.rs  metrics.rs
crates/screenpipe-audio/tests/: audio_robustness_test.rs  core_tests.rs
crates/screenpipe-capture/: Cargo.toml
crates/screenpipe-capture/examples/: ocr_gate_ab.rs
crates/screenpipe-capture/src/: lib.rs  ocr_gate.rs  paired_capture.rs
crates/screenpipe-config/src/: recording.rs  screen_lock.rs
crates/screenpipe-connect/: Cargo.toml
crates/screenpipe-connect/src/: oauth.rs  oauth_refresh_scheduler.rs  (+2 more)
crates/screenpipe-core/: Cargo.toml
crates/screenpipe-engine/: Cargo.toml
crates/screenpipe-redact/: Cargo.toml
crates/screenpipe-resource/: Cargo.toml
crates/screenpipe-resource/src/: cpu.rs  lib.rs
crates/screenpipe-screen/: Cargo.toml
crates/screenpipe-sqlite-coordinator/: Cargo.toml
crates/screenpipe-sqlite-coordinator/src/: lib.rs
crates/screenpipe-sync/: README.md
docs/: VISION_INDEXING_SPEC.md
docs/coverage/: CORE.md  README.md
docs/mcp-registry/: mockups.html
docs/translations/: README-de.md  README-es.md  README-fr.md  README-ja.md  README-pt_BR.md  README-uk.md  README-zh_CN.md  README.md
ee/desktop-rust/: enterprise_sync.rs
ee/sdk/: Cargo.toml  index.d.ts
ee/sdk/examples/tauri-app/src/: main.js
ee/sdk/recorder-core/: Cargo.toml
ee/sdk/recorder-core/src/platform/: recorder.rs
ee/sdk/recorder-core/tests/: sqlite_coordinator.rs
ee/sdk/src/: lib.rs
ee/sdk/src/platform/: recorder.rs
ee/sdk/tauri/rust/: Cargo.toml
ee/sdk/tauri/rust/src/: lib.rs
patches/knf-rs-sys/: Cargo.toml  build.rs
scripts/memory-leak/: leak_hunt.py  test_leak_hunt.py
sdk/: Cargo.toml  package.json
sdk/docs/: integration.md  release.md
sdk/recorder-core/: Cargo.toml
sdk/src/: lib.rs
(+578 files in other folders)
