[package]
name = "screenpipe-sdk"
version = "0.2.0"
edition = "2021"
description = "Screenpipe SDK — Rust core for screen recording exposed via napi-rs"
license = "LicenseRef-Screenpipe-Enterprise"
publish = false

# The SDK is intentionally not part of the parent screenpipe workspace
# (see the root Cargo.toml `workspace.exclude`). Declaring an empty
# `[workspace]` table here keeps cargo from walking up the directory tree
# searching for a parent — important when the repo is checked out under a
# git worktree, where the worktree path is nested inside another tree that
# does NOT exclude `ee/sdk` and would otherwise mis-attach this crate.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "process"] }
tracing = "0.1"
# PNG encoding for frames before handing them to ffmpeg's image2pipe demuxer
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Depend on the local Screenpipe monorepo crates. The JS API stays narrow, but
# `screenpipe-screen` brings more monorepo crates transitively
# (connect/db/events/secrets), so audit build size before a public release if
# package weight matters.
# Mic level meter uses `cpal` directly — pulling `screenpipe-audio` would
# drag in whisper-rs, ort, vad-rs, symphonia, audiopipe. Computing RMS on
# a running cpal input stream is ~30 lines and doesn't reinvent anything
# screenpipe-audio exposes as a "just a level meter" helper.
screenpipe-screen = { path = "../../crates/screenpipe-screen" }
screenpipe-core   = { path = "../../crates/screenpipe-core", default-features = false }
screenpipe-a11y   = { path = "../../crates/screenpipe-a11y", default-features = false }
# Paired-capture + DB persistence (opt-in via RecorderOptions.data_dir). When
# the caller does not provide a dataDir, these crates are still linked but no
# DB connection is opened, so the runtime cost stays at the static size cost.
screenpipe-capture = { path = "../../crates/screenpipe-capture" }
screenpipe-db     = { path = "../../crates/screenpipe-db" }
screenpipe-config = { path = "../../crates/screenpipe-config" }
chrono = { version = "0.4", features = ["serde"] }
# Used to bridge the (sync) UiEvent stream from screenpipe-a11y's RecordingHandle
# into a tokio mpsc so the paired-capture loop can `select!` on it.
crossbeam-channel = "0.5"
cpal = { git = "https://github.com/screenpipe/cpal.git", branch = "main" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
